<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_linear_outer"
    android:layout_marginEnd="@dimen/margin_linear_outer"
    android:layout_marginBottom="@dimen/margin_linear_outer"
    android:background="@color/color_bmi_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_linear_outer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_height"
            android:layout_width="@dimen/edt_bmi_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/iv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_height" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/et_height"
            android:layout_toEndOf="@id/iv_height"
            android:labelFor="@id/et_height"
            android:text="@string/height" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="@dimen/edt_bmi_width"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="numberDecimal" />

        <ImageView
            android:id="@+id/iv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_weight" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/et_weight"
            android:layout_toEndOf="@id/iv_weight"
            android:labelFor="@id/et_weight"
            android:text="@string/weight" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/doubt"

            />

        <ImageView
            android:id="@+id/iv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sex" />

        <ImageView
            android:id="@+id/iv_sex_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_sex"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_sex_equal" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/iv_sex_equal"
            android:layout_toEndOf="@id/iv_sex"
            android:text="@string/sex" />

    </RelativeLayout>
    <Button
        android:id="@+id/btn_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/calculate" />
    <TextView
        android:id="@+id/tv_bmi_advice"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/advice"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_bmi_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/bmi_value"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_marginTop="7dp"
        style="@style/MyTable.Title"
        android:text="@string/bmi_table"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <TextView

           style="@style/MyTable"
            android:text="@string/range"
             />

        <TextView
            style="@style/MyTable"
            android:layout_marginStart="5dp"
            android:text="@string/bmi_category"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <TextView
            style="@style/MyTable"
            android:text="@string/less20" />

        <TextView
            style="@style/MyTable"
            android:layout_marginStart="5dp"
            android:text="@string/category_less"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <TextView
            style="@style/MyTable"
            android:text="@string/normal"/>

        <TextView
            style="@style/MyTable"
            android:layout_marginStart="5dp"
            android:text="@string/category_normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">

        <TextView
            style="@style/MyTable"
            android:text="@string/over25"
           />

        <TextView
            style="@style/MyTable"
            android:layout_marginStart="5dp"
            android:text="@string/category_over"
            />
    </LinearLayout>

</LinearLayout>